tests/NormalTests/paczka2/big_fuzzy/57755209.err
Error in line 1: UmTf8Ohe S999 58,4
Error in line 6: A296 A296 79,4
Error in line 10: A296 S483 16,9
Error in line 15: uysyoM3K A189 22,8
Error in line 35: uu2eb A296 53,2
Error in line 27: A296 S999 48,2
Error in line 49: uysyoM3K S999 178,0
Error in line 41: rk062WAuA S999 91,1
Error in line 59: rk062WAuA A296 78,4
Error in line 64: rk062WAuA S483 32,2
Error in line 71: rk062WAuA A296 -4,6
Error in line 72: rk062WAuA S483 88,8
Error in line 55: uysyoM3K A296 24,7
Error in line 69: uu2eb A189 69,2
Error in line 83: yq2HP6eXD A296 80,46
Error in line 80: uu2eb S999 70,7
Error in line 91: UmTf8Ohe S483 76,9
Error in line 87: rk062WAuA S999 81,4
Error in line 103: UmTf8Ohe A189 6,92
Error in line 104: A296 A189 -1,04
Error in line 106: yq2HP6eXD S999 73,0
Error in line 114: uu2eb A1>9 103,7
Error in line 109: yq2HP6eXD A189 34,2
Error in line 116: A296 S999 66,77
Error in line 110: rk062WAuA S999 73,7
Error in line 99: A296 A189 11,7
Error in line 112: uu2eb A189 25,8
Error in line 119: A296 S999 321,5
Error in line 127: uysyoM3K S999 14,3
Error in line 129: uysyoM3K A296 71,3
Error in line 131: uysyoM3K A189 31,4
Error in line 139: UmTf8Ohe S483 24,2
Error in line 146: kj9oQRPl S483 25,9
Error in line 160: kj9oQRPl A296 69,1
Error in line 170: uu2eb A189 90,1
Error in line 175: uu2eb A296 15,8
Error in line 179: A296 S483 98,8
Error in line 187: UmTf8Ohe A189 -3,9
Error in line 195: UmTf8Ohe A189 17,9
Error in line 200: uysyoM3K S999 12,1
Error in line 205: UmTf8Ohe A189 8,1
Error in line 202: yq2HP6eXD S999 99,9
Error in line 167: kj9oQRPl S483 71,4
Error in line 222: uu2eb A189 90,5
Error in line 236: kj9oQRPl S999 70,3
Error in line 241: rk062WAuA S999 75,2
